parser/src/test/resources/corpus/invalid/40_function_call_missing_comma.ff
rule "Func Empty First Arg" {
  let x = max(, above_hwm)
}
